<resources>
    <string name="app_name">Youtube Copy</string>
    <string name="title1">JuJu Goes Zip Lining with Danny</string>
    <string name="title10">Duncan!</string>
    <string name="insc">JuJu Smith-Schuster • 92K views</string>
    <string name="duration">4:10</string>
    <string name="duration2">2:21</string>
    <string name="insc2">3 months ago</string>
    <string name="title3">Lele Pons - Celoso (Official Music Video)</string>
    <string name="insc3">Lele Pons • 340mi views</string>
    <string name="insc4">2 years ago</string>
</resources>