<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title1"
        android:textColor="#000000"
        tools:layout_editor_absoluteX="93dp"
        tools:layout_editor_absoluteY="259dp" />



    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="48dp"
        android:layout_height="54dp"
        app:srcCompat="@drawable/icone01"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="259dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title10"
        android:textColor="#000000"
        tools:layout_editor_absoluteX="93dp"
        tools:layout_editor_absoluteY="278dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insc"
        tools:layout_editor_absoluteX="93dp"
        tools:layout_editor_absoluteY="300dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insc2"
        tools:layout_editor_absoluteX="93dp"
        tools:layout_editor_absoluteY="319dp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/mennu"
        tools:layout_editor_absoluteX="360dp"
        tools:layout_editor_absoluteY="266dp" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/thumb02"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="119dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title3"
        android:textColor="#000000"
        tools:layout_editor_absoluteX="93dp"
        tools:layout_editor_absoluteY="608dp" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="46dp"
        android:layout_height="55dp"
        app:srcCompat="@drawable/icone02"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="610dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insc4"
        tools:layout_editor_absoluteX="93dp"
        tools:layout_editor_absoluteY="646dp" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/mennu"
        tools:layout_editor_absoluteX="360dp"
        tools:layout_editor_absoluteY="627dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insc3"
        tools:layout_editor_absoluteX="93dp"
        tools:layout_editor_absoluteY="627dp" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/thumbb01"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-228dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="36dp"
        android:layout_height="29dp"
        android:background="@color/black"
        app:backgroundTint="#000000"
        tools:layout_editor_absoluteX="356dp"
        tools:layout_editor_absoluteY="549dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="41dp"
        android:layout_height="29dp"
        android:background="@color/black"
        app:backgroundTint="#000000"
        tools:layout_editor_absoluteX="354dp"
        tools:layout_editor_absoluteY="204dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="35dp"
        android:layout_height="22dp"
        android:text="@string/duration2"
        android:textColor="#FFFFFF"
        tools:layout_editor_absoluteX="360dp"
        tools:layout_editor_absoluteY="551dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="28dp"
        android:layout_height="19dp"
        android:text="@string/duration"
        android:textColor="#FFFFFF"
        app:flow_horizontalAlign="center"
        app:flow_verticalAlign="center"
        tools:layout_editor_absoluteX="360dp"
        tools:layout_editor_absoluteY="208dp" />

</androidx.constraintlayout.widget.ConstraintLayout>